files for distribution added

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # ignore files
 *.py~
 gencfs.e4p
+MANIFEST
 
 # ignore directories
 .eric5project/*
@@ -10,6 +11,8 @@ dist/*
 
 __pycache__
 html/*
+dist/*
+build/*
 
 
 
